2002-04-26  James Tanis  <jtt@saint.sysdetect.com>

	* lib/b_pollio.c (polling_io_ioh_handler): Using [0] to reference
	a pointer which is not in an array is legal but ugly.

	* lib/b_bnbio.c (bk_iohh_bnbio_write): Do at least one poll on
	each write to clean up the state created by the write (under
	normal conditions).

2002-04-26    <seth@luggage>

	* src/bttcp.c (main): Add UDP option, add -c close-after-one
	option, start adding multicsat options, but still need backend
	support

	* lib/b_addrgroup.c: Sanify as destruction--multiple frees allowed.
	Add UDP transmit support (receive support is a bit more tricky)

2002-04-25 Brian Lindauer <lindauer@sysd.com>

	* lib/b_error.c: added bk_error_istrdump to dump errors to string
	* include/libbk.h: same
	
2002-04-18  Seth Robertson  <seth@startide.sysdetect.com>

	* include/libbk_net.h: Internal version of common network headers (struct ip, etc)

2002-04-15  Seth Robertson  <seth@startide.sysdetect.com>

	* lib/b_bits.c (bk_bitcount): New function to count numbers of
	bits in a word.

2002-04-05  Alexander Dupuy  <dupuy@sysdetect.com>

	* lib/b_string.c (bk_memrchr): bounded string [buffer] strrchr

2002-04-05  James Tanis  <jtt@saint.sysdetect.com>

	* awb/awb-ids (multiple_places) Convert to use new jobstep stat
	struct instead of two "copyout" u_int's.

	* lib/b_string.c (bk_string_alloc_sprintf): Add more user
	tweakable things to API [and then fix up callers].

2002-04-04  Alexander Dupuy  <dupuy@sysdetect.com>

	* lib/b_string.c (bk_strnspacecmp): bounded string comparison
	ignoring whitespace differences

2002-04-01  Seth Robertson  <seth@startide.sysdetect.com>

	* include/libbk_oscompat.h: Size defintions for those who don't have 'em

	* lib/b_string.c (bk_string_printbuf): It is too confusing when
	address bytes and data bytes are next to each other.

2002-03-28  James Tanis  <jtt@saint.sysdetect.com>

	* lib/b_string.c (bk_string_unique_string): Create a (very likely)
	unique string.
